# flask-profiler-modern

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
examples/: app.py
flask_profiler/: __init__.py  flask_profiler.py
flask_profiler/static/: package-lock.json  package.json  vite.config.js
flask_profiler/static/src/: index.html
flask_profiler/static/src/css/: base.css  components.css  normalize.css  tables.css  variables.css
flask_profiler/static/src/js/: charts.js  dashboard.js  dom.js  enhancedDropdown.js  filtering.js  main.js  settings.js  table.js  utils.js
flask_profiler/storage/: base.py  mongo.py  sql_alchemy.py  sqlite.py
tests/: basetest.py  conftest.py  test_endpoint_ignore.py  test_extension_pattern.py  test_measure_endpoint.py  test_measurement.py  test_profiler_http.py  test_storage_backends.py
