[metadata]
name = flask-profiler-modern
version = 2.0.0
license = MIT
description = API endpoint profiler for Flask applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berkpolatCE/flask-profiler-modern
author = Berk Polat, Mustafa Atik
author_email = berkpolat@gmail.com, muatik@gmail.com
maintainer = Berk Polat
maintainer_email = berkpolat@gmail.com
keywords = profiler, flask, performance, monitoring
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    Flask>=3.0.0
    Flask-HTTPAuth>=4.7.0
    simplejson>=3.19.0

[options.extras_require]
sqlalchemy =
    SQLAlchemy>=2.0.0
mongo =
    pymongo>=4.14.1,<5
all =
    %(sqlalchemy)s
    %(mongo)s
dev =
    %(all)s
    pytest>=8.3
    pytest-cov>=5.0
    mongomock>=4.3

[options.package_data]
flask_profiler =
    storage/*
    static/dist/*
    static/dist/css/*
    static/dist/js/*
    static/dist/images/*
    static/dist/fonts/*

[options.packages.find]
where =
